admin: Update API docs with the latest User/UserInfo changes.
