# admin/src/api/index.ts
@@ -22,17 +22,18 @@ export type { GroupRequest } from "./models/GroupRequest";
 export type { PaginatedBlogEntryList } from "./models/PaginatedBlogEntryList";
 export type { PaginatedCompoEntryList } from "./models/PaginatedCompoEntryList";
 export type { PaginatedEventList } from "./models/PaginatedEventList";
-export type { PaginatedUserInfoList } from "./models/PaginatedUserInfoList";
+export type { PaginatedUserList } from "./models/PaginatedUserList";
 export type { PatchedBlogEntryRequest } from "./models/PatchedBlogEntryRequest";
 export type { PatchedCompoEntryRequest } from "./models/PatchedCompoEntryRequest";
 export type { PatchedEventRequest } from "./models/PatchedEventRequest";
-export type { PatchedUserInfoRequest } from "./models/PatchedUserInfoRequest";
+export type { PatchedUserRequest } from "./models/PatchedUserRequest";
 export type { Permission } from "./models/Permission";
 export type { PermissionRequest } from "./models/PermissionRequest";
 export type { SocialAuthURL } from "./models/SocialAuthURL";
+export type { User } from "./models/User";
 export type { UserInfo } from "./models/UserInfo";
-export type { UserInfoRequest } from "./models/UserInfoRequest";
 export type { UserLoginRequest } from "./models/UserLoginRequest";
+export type { UserRequest } from "./models/UserRequest";
 
 export { AuthService } from "./services/AuthService";
 export { BlogEntriesService } from "./services/BlogEntriesService";
